Fix tests for new Podman
Fix tests for new Podman
CI: add fuse-overlayfs for buildah tests

Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/ci/playbooks/pre.yml
+++ b/ci/playbooks/pre.yml
@@ -86,6 +86,7 @@
               - netavark
               - uidmap
               - passt
+              - fuse-overlayfs
             state: latest
 
     - name: Remove virtualenv if need
